<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        app:srcCompat="@drawable/ic_live_help_black_24dp" />

    <TextView
        android:layout_width="101dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:textColor="#4a148c"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:text="@string/atencao" />

    <TextView
        android:id="@+id/txtinformation"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:text="@string/warning"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancela"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="#FF1744"
            android:text="@string/cancelar"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnConfirma"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20px"
            android:background="#00E676"
            android:text="@string/confirmar"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>